# mlux

./: .gitignore  CLAUDE.md  Cargo.toml  PROTOTYPE_PLAN_V2.md  README.md  THIRD_PARTY.md  TODO.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: 2026-02-23-design-viewer.md  2026-02-23-ref-frame-tree.md  2026-02-23-ref-kitty-protocol.md  2026-02-23-ref-typst-api.md  2026-02-26-design-source-mapping.md  2026-02-28-design-line-exact.md  2026-02-28-spec-viewer.md  2026-03-04-comparison.md  2026-03-07-design-security.md  2026-03-14-design-tile-cache.md  2026-03-15-design-content-index.md  2026-03-15-ref-highlight-cell-alignment.md  2026-03-15-viewer-test-harness-design.md  2026-03-18-design-security-reassessment.md  2026-03-19-design-usecase-orchestration.md  2026-03-20-experiment-cjk-emphasis.md  2026-03-20-log-viewer-design.md  2026-03-20-viewport-refactor-design.md  2026-03-21-comparison.md  2026-03-21-latin-mode-design.md  2026-03-23-design-prescan-lifecycle.md  2026-03-25-latin-font-design.md  2026-03-29-design-package-restructure.md  2026-04-09-design-reload-perf.md  2026-04-11-investigate-tile-hash-nondeterminism.md  2026-04-12-design-scroll-acceleration.md  2026-04-17-investigate-scroll-perf.md  2026-04-18-design-scroll-animation.md  2026-04-18-experiment-subcell-scroll.md  2026-04-19-plan-scroll-animator-extraction.md  2026-04-20-experiment-scroll-animation-tuning.md  2026-04-25-experiment-content-column-cap.md  2026-04-25-investigate-typst-typography.md  2026-04-28-design-mouse-input.md  2026-04-28-investigate-zoom-feasibility.md  2026-04-29-design-history-driven-animator.md  2026-04-29-experiment-kinetic-scroll.md  2026-04-29-experiments-scroll-animation.md  SPEC.md  TODO.md  (+19 more)
docs/design/: mouse-input.md  scroll-animation.md  typography.md  zoom.md
fonts/: OFL-STIXTwoMath.txt
fuzz/: Cargo.toml  README.md  rust-toolchain.toml
fuzz/dict/: markdown.dict
fuzz/fuzz_targets/: fuzz_convert.rs  fuzz_pipeline.rs  reproduce.rs
scripts/: bump-version.sh
src/: app_context.rs  config.rs  convert.rs  diagram.rs  diff.rs  fork_render.rs  highlight.rs  image.rs  input.rs  lib.rs  log.rs  main.rs  pipeline.rs  process.rs  render.rs  renderer.rs  sandbox.rs  strip.rs  theme.rs  tile.rs  tile_cache.rs  url.rs  usecase.rs  viewer.rs  visual_line.rs  watch.rs  world.rs
src/compile/: markup.rs  markup_util.rs  mod.rs  typst.rs  world.rs
src/fork_render/: mod.rs  process.rs  sandbox.rs
src/fork_sandbox/: mod.rs  process.rs  sandbox.rs
src/frame/: highlight.rs  mod.rs  render_png.rs  tile.rs  tile_cache.rs  visual_line.rs
src/pipeline/: build.rs  content_index.rs  markup.rs  markup_html.rs  markup_util.rs  mod.rs  render.rs  typst_compile.rs  world.rs
src/viewer/: display_state.rs  effect.rs  input.rs  input_history.rs  keymap.rs  layout.rs  mod.rs  mode_command.rs  mode_grep.rs  mode_inline_search.rs  mode_log.rs  mode_normal.rs  mode_search.rs  mode_toc.rs  mode_url.rs  pipeline.rs  query.rs  scroll.rs  scroll_animator.rs  scroll_policy.rs  search.rs  session.rs  state.rs  terminal.rs  test_harness.rs  test_highlight.rs  (+2 more)
tests/: fork_render.rs  integration.rs  test_renderer.rs  usecase.rs
themes/: catppuccin-latin.typ  catppuccin-latte-latin.typ  catppuccin-latte.typ  catppuccin.typ  mitex-compat.typ
tools/: kgp_offset_experiment.py
(+21 files in other folders)
