[package]
name = "mlux"
version = "0.1.0"
authors = ["saka1"]
edition = "2024"
description = "A rich Markdown viewer for modern terminals"
license = "MIT"
repository = "https://github.com/saka1/mlux"
rust-version = "1.85"
keywords = ["markdown", "typst", "terminal", "viewer"]
categories = ["command-line-utilities"]
exclude = ["docs/", "fuzz/", "tests/", "CLAUDE.md"]

[dependencies]
typst = "0.14"
typst-render = "0.14"
typst-kit = { version = "0.14", features = ["embed-fonts"] }
pulldown-cmark = "0.12"
clap = { version = "4", features = ["derive"] }
comemo = "0.5"
ecow = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
crossterm = "0.28"
base64 = "0.22"
notify = "8"
open = "5"
regex = "1"
log = "0.4"
env_logger = "0.11"
