[package]
name = "mlux"
version = "1.2.1"
authors = ["saka1"]
edition = "2024"
description = "A rich Markdown viewer for modern terminals"
license = "MIT"
repository = "https://github.com/saka1/mlux"
rust-version = "1.91"
keywords = ["markdown", "typst", "terminal", "viewer"]
categories = ["command-line-utilities"]
exclude = ["docs/", "fuzz/", "tests/", "fonts/", "CLAUDE.md"]

[features]
default = ["embed-noto-fonts"]
embed-noto-fonts = []

[dependencies]
typst = "0.14"
typst-render = "0.14"
typst-kit = { version = "0.14", default-features = false, features = ["embed-fonts"] }
pulldown-cmark = "0.12"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
base64 = "0.22"
notify = "8"
open = "5"
regex = "1"
log = "0.4"
env_logger = "0.11"
zstd = "0.13"
mitex = "0.2"
mermaid-rs-renderer = { version = "0.2", default-features = false }
bincode = { version = "2", features = ["serde"] }
nix = { version = "0.29", features = ["process", "signal"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[build-dependencies]
zstd = "0.13"

# harness=false: these tests call fork(), which deadlocks under the default
# test harness because its thread pool leaves locked mutexes (heap allocator,
# etc.) in the forked child.  A custom main() runs them single-threaded.
[[test]]
name = "fork_render"
harness = false

[profile.release]
strip = "debuginfo"
lto = "thin"
panic = "abort"
