[package]
name = "mlux-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
[dependencies.mlux]
path = ".."

[workspace]
members = ["."]

[[bin]]
name = "fuzz_convert"
path = "fuzz_targets/fuzz_convert.rs"
doc = false

[[bin]]
name = "fuzz_pipeline"
path = "fuzz_targets/fuzz_pipeline.rs"
doc = false

[[bin]]
name = "reproduce"
path = "fuzz_targets/reproduce.rs"
doc = false
